[package]
name = "rustymouse"
version = "1.1.0"
authors = ["Sampsa Sarjanoja <sampsa.sarjanoja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }